Fix startup quoter spacing

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ body::before {
  opacity: 0;
  transform: translateY(-10px);
  transition: opacity 1s ease-in-out 0.3s, transform 1s ease-in-out 0.3s;
- margin: 0 18vw;
+ margin: 1.5rem 0 0 0;
 }
 
 #startup-prompt {
